--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -977,7 +977,7 @@
     "month-5": "Mai",
     "month-6": "Juni",
     "month-7": "Juli",
-    "month-8": "Agosto",
+    "month-8": "August",
     "month-9": "September",
     "month-name": "Monatsname",
     "month-wildcard-info": "Aktueller Monat (des aktuellen Datums)",
@@ -1025,7 +1025,7 @@
     "no-stock": "Kein Bestand",
     "non-editable-accounting-entry": "Nicht bearbeitbarer Buchungseintrag",
     "non-editable-columns": "non-editable-columns",
-    "non-editable-document": "Non editable document",
+    "non-editable-document": "Nicht bearbeitbares Dokument",
     "none": "Keine",
     "normal": "Normal",
     "not-allowed-delete": "not-allowed-delete",
@@ -1109,7 +1109,7 @@
     "pattern": "Muster",
     "pattern-without-number": "Das gewählte Muster enthält keine Zahl, daher könnte es sein, dass duplikative Codes erzeugt werden.",
     "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
-    "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
+    "pattern-without-year": "Das gewählte Muster enthält kein Geschäftsjahr oder Datum, sodass möglicherweise in jedem Geschäftsjahr doppelte Codes generiert werden.",
     "pay": "bezahlen",
     "pay-with-card": "Zahlung mit Kreditkarte",
     "payment": "Zahlung",
@@ -1149,7 +1149,7 @@
     "plugin-deleted": "Plugin %1$s erfolgreich gelöscht.",
     "plugin-disabled": "Plugin korrekt deaktiviert.",
     "plugin-enabled": "Plugin erfolgreich aktiviert.",
-    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
+    "plugin-file-too-big": "Dieser Server erlaubt keine Dateien über %size% MB hochzuladen. Bitte erhöhen Sie die maximale Dateigröße für das Hochladen in PHP oder kopieren Sie die Datei in den Plugins-Ordner.",
     "plugin-installation-disabled": "Die Plugin-Installation ist auf diesem Server deaktiviert",
     "plugin-installed": "Plugin installiert",
     "plugin-need-update": "Das Plugin %plugin% muss aktualisiert werden, um mit der neuen Version von FacturaScripts zu funktionieren.",
@@ -1168,7 +1168,7 @@
     "points-of-interest": "Sehenswürdigkeiten",
     "port": "Puerto",
     "position": "Position",
-    "positive-balance": "positive-balance",
+    "positive-balance": "Positiver Saldo",
     "post-office-box": "Postfach",
     "postgresql": "PostgreSQL",
     "precio": "Prive",
@@ -1189,7 +1189,7 @@
     "print-data-records": "Alle Datensätze drucken",
     "print-export-options": "Druck- und Exportoptionen",
     "print-list-of-records": "Liste der Datensätze drucken",
-    "print-price": "Imprimir precios",
+    "print-price": "Preise drucken",
     "print-quantity": "Druckmenge",
     "printed": "gedruckt",
     "printing-format": "Druckformat",
@@ -1319,7 +1319,7 @@
     "sales": "Der Umsatz",
     "sales-invoice": "Verkaufsrechnung",
     "sales-rate": "Verkaufsrate",
-    "sales-subaccount-not-found": "sales-subaccount-not-found",
+    "sales-subaccount-not-found": "Verkaufsunterkonto nicht gefunden",
     "same-group": "Gleiche Gruppe",
     "saturday": "Samstag",
     "save": "speichern",
@@ -1426,7 +1426,7 @@
     "status-name-valid-length": "Ungültiger Statusname Muss zwischen 1 und 20 Zeichen lang sein.",
     "status-value-is-number": "El campo estado debe ser numérico.",
     "stock": "Stock",
-    "stock-transfer": "stock transfer",
+    "stock-transfer": "Bestandsübertragung",
     "stock-transfers": "Bestandübertragungen",
     "stockmax": "Lager max.",
     "stockmin": "Lager min.",
@@ -1522,7 +1522,7 @@
     "this-last-week": "this-last-week",
     "this-last-year": "das letzte Jahr",
     "this-month": "this-month",
-    "this-week": "this-week",
+    "this-week": "Diese Woche",
     "this-year": "dieses Jahr",
     "thousands-separator": "Tausendertrennzeichen",
     "thursday": "Donnerstag",
@@ -1562,8 +1562,8 @@
     "type-alert": "Type alert",
     "type-critical": "Kritischer Typ",
     "type-debug": "Debug-Typ",
-    "type-emergency": "Type emergency",
-    "type-error": "Type error",
+    "type-emergency": "Notfalltyp",
+    "type-error": "Fehlerart",
     "type-info": "Informationstyp",
     "type-notice": "Hinweistyp",
     "type-success": "Typ erfolgreich",
@@ -1575,14 +1575,14 @@
     "undo": "Rückgängig machen",
     "unit-profit": "unit-profit",
     "unit-purchase-price": "Einzelhandelspreis",
-    "unit-sale-price": "unit-sale-price",
+    "unit-sale-price": "Einzelverkaufspreis",
     "unlimited": "Unbegrenzt",
     "unlink": "Trennen",
     "unlink-file": "Datei trennen",
     "unlink-install-ok": "Installation erfolgreich aus dem Register gelöscht.",
     "unlock-entry": "Eintrag entsperren",
     "unpaid": "Unbezahlt",
-    "until-accounting-entry": "until-accounting-entry",
+    "until-accounting-entry": "Bis Buchung",
     "until-date": "bis-Datum",
     "until-subaccount": "Bis Unterkonto",
     "update": "aktuallisieren",
@@ -1600,7 +1600,7 @@
     "use-gaps": "Lücken nutzen",
     "use-holes-invoices-esp": "Wenn Sie die Verwendung von Lücken in Rechnungen abwählen und eine löschen, bleibt die Lücke in der Abrechnung und Sie haben Probleme mit dem Finanzamt.",
     "user": "Benutzer",
-    "user-and-config": "Usuario y configuración",
+    "user-and-config": "Benutzer und Konfiguration",
     "users": "Benutzer",
     "using-apc": "Verwenden des APC-Caches",
     "using-filecache": "Verwenden von Filecache",
@@ -1658,7 +1658,7 @@
     "wizard": "Asistent",
     "wizard-p": "Füllen Sie dieses Formular zu Ihrem Unternehmen aus, um die Konfiguration abzuschließen.",
     "wizard-plugins": "Ein Plugin ist eine Ergänzung, die neue Funktionalitäten hinzufügt. Wählen Sie die Plugins aus, die Sie sofort aktivieren möchten, oder tun Sie dies später über die Systemsteuerung.",
-    "work-events": "Eventos de trabajo",
+    "work-events": "Arbeitsevents",
     "working-hours": "Arbeitszeit",
     "works": "Trabajos",
     "write-a-message-here": "Schreibe eine Nachricht hier",
