--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -239,7 +239,7 @@
     "cities": "Città",
     "city": "Città",
     "click-link-to-add": "Fare clic sul link per aggiungere",
-    "clone": "Clone",
+    "clone": "Duplicare",
     "clone-account-entry": "Duplicare la registrazione contabile",
     "close": "vicino",
     "close-box": "Chiudi cassa",
@@ -540,7 +540,7 @@
     "error-connecting-memcache": "Errore durante la connessione al server Memcache.",
     "error-deleting-lines": "Errore nella cancellazione delle righe",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
-    "error-on-xml-file": "Error on XML file %fileName%",
+    "error-on-xml-file": "Errore nel file XML %fileName%",
     "error-processing-xmlview": "Errore nell'elaborazione della vista XML, il file '0' non esiste o non è corretto",
     "error-reading-file": "Errore durante la lettura del file% 1 $ s",
     "error-saving-lines": "Errore nel salvataggio delle righe",
@@ -706,7 +706,7 @@
     "group-by-week-unixtime": "Raggruppa per settimana unixtime",
     "group-by-year": "Raggruppa per anno",
     "group-by-year-unixtime": "raggruppa-per-anno-unixtime",
-    "group-more-docs-p": "group-more-docs-p",
+    "group-more-docs-p": "Se lo desideri, puoi raggruppare insieme ad altri documenti di questo cliente\/fornitore",
     "group-name": "Nome del Gruppo",
     "group-or-split": "Agruppare o dividere",
     "group-or-split-p": "Questo assistente consente di generare un nuovo documento dalle righe di altri. Seleziona le quantità che desideri utilizzare, la data del nuovo documento e premi il pulsante generare.",
@@ -796,7 +796,7 @@
     "invoice-without-acc-entry": "Fattura senza movimento contabile",
     "invoiced": "fatturato",
     "invoices": "banconote",
-    "invoices-cant-generate-new-docs": "Las facturas no pueden generar nuevos documentos",
+    "invoices-cant-generate-new-docs": "Le fatture non possono generare nuovi documenti",
     "ip": "IP",
     "ip-banned": "ip-bannato",
     "irpf": "IRPEF",
@@ -830,7 +830,7 @@
     "languages-de_DE": "Tedesco",
     "languages-en_EN": "Inglese",
     "languages-es_AR": "Spagnolo (Argentina)",
-    "languages-es_CL": "languages-es_CL",
+    "languages-es_CL": "Lingue-es_CL",
     "languages-es_CO": "Spagnolo (Colombia)",
     "languages-es_CR": "Spagnolo (Costa Rica)",
     "languages-es_DO": "Spagnolo (Rep. Dominicana)",
@@ -845,7 +845,7 @@
     "languages-fr_FR": "Francese",
     "languages-gl_ES": "lingue-gl_ES",
     "languages-it_IT": "Italiano",
-    "languages-pl_PL": "Polaco",
+    "languages-pl_PL": "Polacco",
     "languages-pt_BR": "Portoghese (Brasile)",
     "languages-pt_PT": "Portoghese",
     "languages-va_ES": "Lingua va_ES",
@@ -1023,7 +1023,7 @@
     "no-reference": "Sin referencia",
     "no-selected-item": "Nessun elemento selezionato",
     "no-stock": "Nessun stock",
-    "non-editable-accounting-entry": "non-editable-accounting-entry",
+    "non-editable-accounting-entry": "Assegnazione non modificabile",
     "non-editable-columns": "Colonna non modificabile: %columns%",
     "non-editable-document": "Documento non modificabile",
     "none": "Nessuno",
@@ -1182,7 +1182,7 @@
     "previously-purchased-from-supplier": "Acquistato in precedenza dal fornitore",
     "previously-sold-to-customer": "Venduto precedentemente al cliente",
     "price": "Prezzo",
-    "price-with-tax": "price-with-tax",
+    "price-with-tax": "Prezzo + tasse",
     "principal": "Principale",
     "print": "Stampare",
     "print-bank-data": "stampa dati bancari",
@@ -1251,7 +1251,7 @@
     "rectified-invoice": "Fattura rettificativa",
     "rectified-invoice-p": "Le fatture sono documenti commerciali e hanno una serie di restrizioni legali. Non possono essere eliminate o modificate. Sono ammesse solo restituzioni totali o parziali. Utilizzare questo modulo per eseguire un reso su questa fattura.",
     "rectified-invoices": "Fatture correttive",
-    "rectifying": "Rectificativa",
+    "rectifying": "Fattura rettificativa",
     "rectifying-serie": "serie correttiva",
     "redirect": "Reindirizzamento",
     "reference": "Riferimento",
@@ -1431,7 +1431,7 @@
     "stockmax": "Magazzino max",
     "stockmin": "Scorte min.",
     "storage-limit-almost": "Limite di archiviazione quasi raggiunto (%limit%). Restano %free%",
-    "storage-limit-reached": "storage-limit-reached",
+    "storage-limit-reached": "Limite di archiviazione raggiunto",
     "stripe": "Stripe",
     "structured-data-csv": "File CSV",
     "sub-account": "Account secondario",
@@ -1472,14 +1472,14 @@
     "supplier-invoice-deleted-successfully": "La fattura di acquisto 0 è stata cancellata correttamente.",
     "supplier-invoices": "Fatture Fornitori",
     "supplier-not-found": "Fornitore non trovato",
-    "supplier-order": "Supplier order",
+    "supplier-order": "Ordine fornitore",
     "supplier-orders": "Ordini fornitore",
     "supplier-payment-concept": "Pagamento della ricevuta %document%",
     "supplier-products": "Prodotti del fornitore",
     "supplier-reference": "Riferimento del fornitore",
     "suppliers": "fornitori",
     "support": "Supporto",
-    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
+    "supported-tax-re-subaccount": "Subcuenta ricargo supportato",
     "supported-tax-subaccount": "Sottocount tasse supportate",
     "surcharge": "Sovraccarico",
     "surname": "cognomi",
