--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -197,7 +197,7 @@
     "cant-delete-default-company": "Não é possível excluir a empresa padrão",
     "cant-delete-default-country": "Não é possível eliminar o país padrão",
     "cant-delete-default-currency": "Não é possível excluir a moeda padrão",
-    "cant-delete-default-payment-method": "cant-delete-default-payment-method",
+    "cant-delete-default-payment-method": "Não se pode eliminar o método de pagamento padrão",
     "cant-delete-default-serie": "Não é possível eliminar a Série por defeito",
     "cant-delete-default-tax": "Não é possível excluir o imposto padrão",
     "cant-delete-default-warehouse": "Não é possível excluir o armazém padrão",
@@ -232,7 +232,7 @@
     "choose-doc-type": "Escolher o tipo de documento",
     "choose-employee": "Escolha empregado",
     "choose-files": "Escolher arquivos",
-    "choose-payment-method": "Choose payment method",
+    "choose-payment-method": "Escolha o método de pagamento",
     "choose-serie": "Seleciona a série",
     "choose-source": "Escolher fonte",
     "cifnif": "CIF\/NIF",
@@ -328,7 +328,7 @@
     "country-not-in-eu": "O %codiso% não pertence a nenhum país da União Europeia",
     "create": "Criar",
     "create-accounting-entry": "Criar lançamento contábil",
-    "create-delivery-note": "Crear albarán",
+    "create-delivery-note": "Criar albaran",
     "create-estimation": "Criar orçamento",
     "create-invoice": "Criar fatura",
     "create-new-record": "Criar novo registro",
@@ -431,7 +431,7 @@
     "desc-alfa-code-2": "Identificação oficial para o nome dos países e outras dependências administrativas",
     "desc-alfa-code-3": "Identificação oficial para os nomes dos países e outras unidades administrativas",
     "desc-business-name": "Nome oficial do cliente, para faturas e outros documentos.",
-    "desc-business-name-2": "Nome legal ou legalmente registrado do cliente",
+    "desc-business-name-2": "Nome fiscal ou legalmente registrado do cliente",
     "desc-customer-name": "Nome pelo que chamamos ao  cliente. Para uso interno.",
     "desc-parent-family": "Indica se a família está agrupada em outro nível superior.",
     "desc-payment-days": "Exemplo: 1,15,31",
@@ -462,7 +462,7 @@
     "discharge-date": "Data de descarga: 0",
     "discount": "Desconto",
     "display": "Display",
-    "display-date": "Data de exibição",
+    "display-date": "F. Exibição",
     "do-not-disable-plugins": "Não desativar plugins",
     "do-not-group": "não-agrupar",
     "do-nothing": "Não fazer nada",
@@ -523,10 +523,10 @@
     "enable": "Ativar",
     "enable-api": "Ativar API",
     "enable-updates-beta": "Ativar atualizações beta",
-    "enabled": "ativado",
+    "enabled": "Ativado",
     "enabled-plugins": "Plugins ativados",
     "encrypt": "Criptografia",
-    "end-date": "Data final",
+    "end-date": "Data Final",
     "end-time": "hora-final",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo de Epígrafe",
@@ -700,7 +700,7 @@
     "group-by-day": "Agrupar por dia",
     "group-by-day-unixtime": "Agrupar por dia - unixtime",
     "group-by-month": "group-by-month",
-    "group-by-month-unixtime": "group-by-month-unixtime",
+    "group-by-month-unixtime": "Agrupar por mês (unixtime)",
     "group-by-subaccount": "Agrupar por subconta",
     "group-by-week": "Agrupar por semana",
     "group-by-week-unixtime": "agrupar por semana (unixtime)",
@@ -874,7 +874,7 @@
     "level1": "Nível 1",
     "level2": "Nível 2",
     "level3": "Nível 3",
-    "level4": "Level 4",
+    "level4": "Nível 4",
     "liabilities": "Passivo",
     "library": "Biblioteca",
     "license": "Licença",
@@ -910,7 +910,7 @@
     "longitude": "Longitude",
     "longitude-abb": "Long",
     "look-for-gaps": "Buscar lacunas",
-    "lot": "Muito",
+    "lot": "Lote",
     "low-security": "Baixa Segurança",
     "machine": "máquina",
     "machines": "máquinas",
@@ -1080,7 +1080,7 @@
     "orders": "Pedidos",
     "origin": "origem",
     "origin-warehouse": "Armazém de origem",
-    "original": "original",
+    "original": "Original",
     "original-file": "Arquivo original",
     "other-data": "Outros dados",
     "others-filters": "Outros filtros",
@@ -1107,7 +1107,7 @@
     "passenger": "Passageiro",
     "password": "Senha",
     "pattern": "Padrão",
-    "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
+    "pattern-without-number": "O padrão escolhido não inclui número, portanto é muito provável que gere códigos duplicados.",
     "pattern-without-serie": "O padrão escolhido não inclui série, o que pode gerar códigos duplicados para cada série",
     "pattern-without-year": "O padrão escolhido não inclui exercício ou data, pelo que pode gerar códigos duplicados em cada exercício",
     "pay": "Pagar",
@@ -1142,7 +1142,7 @@
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-support-end": "p",
     "physical-stock": "Estoque físico",
-    "picking": "Preparação",
+    "picking": "Separação",
     "plan": "Plano",
     "please-enter-value": "Por favor, insira um valor",
     "plugin": "Plugin",
@@ -1199,7 +1199,7 @@
     "private-key": "Chave privada",
     "process": "Processo",
     "processing": "A processar",
-    "product": "produtos",
+    "product": "Produto",
     "product-not-found": "Produto %ref% não encontrado",
     "products": "Produtos",
     "profile": "perfil",
@@ -1275,7 +1275,7 @@
     "related": "relacionado",
     "related-subaccount-bank-charges": "Subconta relacionada para despesas bancárias (comissões, etc)",
     "related-subaccount-purchases-sales": "Subconta relacionada para compras e vendas",
-    "reloading": "reloading",
+    "reloading": "Recarregando...",
     "remove-filter": "Eliminar filtros",
     "remove-from-list": "Remover da lista",
     "removing-logs-until": "Removendo logs até %date%",
@@ -1427,7 +1427,7 @@
     "status-value-is-number": "El campo estado deve ser numérico.",
     "stock": "Estoque",
     "stock-transfer": "Transferência de stock",
-    "stock-transfers": "stock transfers",
+    "stock-transfers": "Transferências de estoque",
     "stockmax": "Estoque máximo",
     "stockmin": "Estoque mín.",
     "storage-limit-almost": "Limite de armazenamento quase atingido (%limit%). Restam %free%",
@@ -1487,7 +1487,7 @@
     "swift": "Rápido\/BIC",
     "symbol": "Símbolo",
     "table": "Tabela",
-    "table-checked": "Tabela 0 verificada.",
+    "table-checked": "Tabela %tableName% verificada.",
     "table-not-found": "Tabela %tableName% não encontrada",
     "table-size": "Tamanho da Tabela",
     "tables": "Tabelas",
@@ -1502,14 +1502,14 @@
     "tax-base": "Tax base",
     "tax-credit-account": "Conta de crédito para impostos",
     "tax-debit-account": "Conta de débito para impostos",
-    "tax-transport": "Transporte fiscal",
+    "tax-transport": "Impostos do transporte",
     "taxes": "Impostos",
     "telemetry-data-to-send": "dados de telemetria para enviar",
     "telephone-prefix": "Prefixo telefônico",
     "template": "Modelo",
     "template-error": "Erro de modelo",
     "template-not-found": "Modelo não encontrado",
-    "templates": "Plantillas",
+    "templates": "Modelos",
     "test": "Teste",
     "test-mail-not-implemented": "O teste do controlador de e-mail Mail não está implementado",
     "test-sendmail-not-implemented": "O teste do controlador de correio sendmail não está implementado",
@@ -1591,7 +1591,7 @@
     "update-time": "Hora de atualização",
     "updated-model": "Atualizado %model% (%key%) %desc%",
     "updater": "Atualizador",
-    "updates-available": "Actualizaciones disponibles",
+    "updates-available": "Atualizações disponíveis",
     "updates-available-p": "Há atualizações disponíveis do FacturaScripts. Por favor, clique no atualizador e baixe a nova versão. As atualizações corrigem falhas e adicionam novas funcionalidades.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
@@ -1661,7 +1661,7 @@
     "work-events": "Eventos de trabalho",
     "working-hours": "Horário de trabalho",
     "works": "Trabalhos",
-    "write-a-message-here": "Escribe un mensaje aquí",
+    "write-a-message-here": "Escreva uma mensagem aqui",
     "x-column": "Coluna X",
     "x-operation": "Operação sobre X",
     "y-column": "Coluna Y",
