--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -145,7 +145,7 @@
     "balance-account-abreviated": "Balancete de Contas Abrigado",
     "balance-amounts": "Balanço de Saldos e Saldos",
     "balance-sheet": "Balance Sheet",
-    "balance-sheets": "Balance Sheets",
+    "balance-sheets": "Balancetes",
     "balances": "Balanços",
     "bank-account": "Conta Bancária",
     "bank-accounts": "contas bancárias",
@@ -197,7 +197,7 @@
     "cant-delete-default-company": "Não é possível excluir a empresa padrão",
     "cant-delete-default-country": "Não é possível eliminar o país padrão",
     "cant-delete-default-currency": "cant-delete-default-currency",
-    "cant-delete-default-payment-method": "cant-delete-default-payment-method",
+    "cant-delete-default-payment-method": "Não se pode eliminar o método de pagamento padrão",
     "cant-delete-default-serie": "Não é possível eliminar a série padrão",
     "cant-delete-default-tax": "Não é possível eliminar o imposto padrão",
     "cant-delete-default-warehouse": "cant-delete-default-warehouse",
@@ -232,7 +232,7 @@
     "choose-doc-type": "Escolher tipo de documento",
     "choose-employee": "Escolha empregado",
     "choose-files": "Escolher arquivos",
-    "choose-payment-method": "Choose payment method",
+    "choose-payment-method": "Escolha o método de pagamento",
     "choose-serie": "Seleciona a série",
     "choose-source": "Escolher fonte",
     "cifnif": "TIC \/ TIN",
@@ -328,7 +328,7 @@
     "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
     "create": "Criar",
     "create-accounting-entry": "Criar lançamento contábil",
-    "create-delivery-note": "Crear albarán",
+    "create-delivery-note": "Criar albaran",
     "create-estimation": "Criar estimativa",
     "create-invoice": "Criar fatura",
     "create-new-record": "Criar novo registro",
@@ -489,7 +489,7 @@
     "download-completed": "Download completado",
     "download-error": "Error al descargar. Código %status% - %error%",
     "download-xml": "Descargar XML",
-    "downloads": "downloads",
+    "downloads": "descargas",
     "drag": "Arrastrar",
     "dto": "Disco.",
     "dto-2": "Dto. 2",
@@ -523,7 +523,7 @@
     "enable": "Ativar",
     "enable-api": "Ativar API",
     "enable-updates-beta": "Activar actualizaciones beta",
-    "enabled": "ativado",
+    "enabled": "Ativado",
     "enabled-plugins": "Plugins ativos",
     "encrypt": "Criptografia",
     "end-date": "Data final",
@@ -551,7 +551,7 @@
     "es_EC": "es_EC",
     "es-tax-exception-e1": "E",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
-    "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
+    "es-tax-exception-e3": "Espanha: exceção pelo artigo 22 da Lei do IVA",
     "es-tax-exception-e4": "Espanha: exceção do artigo 23 e 24 da Lei do IVA",
     "es-tax-exception-e5": "Espanha: exceção pelo artigo 25 da Lei do IVA",
     "es-tax-exception-e6": "E",
@@ -667,7 +667,7 @@
     "generate-accounting-entries": "Gerar lançamentos",
     "generate-accounting-entry": "generate-accounting-entry",
     "generate-doc-type": "Gerar tipo de documento",
-    "generate-invoice": "generate-invoice",
+    "generate-invoice": "Criar fatura",
     "generate-receipts": "Gerar recibos",
     "generate-settlements": "generate-settlements",
     "generate-test-data": "Gerar dados de teste",
@@ -683,7 +683,7 @@
     "generated-customer-orders": "0 ordens de clientes geradas.",
     "generated-customers": "0 clientes gerados.",
     "generated-families": "0 famílias geradas.",
-    "generated-invoice": "generated-invoice",
+    "generated-invoice": "Fatura gerada",
     "generated-manufacturers": "0 fabricantes gerados.",
     "generated-products": "%quantity% produtos gerados",
     "generated-subaccounts": "0 sub-contas geradas.",
@@ -861,7 +861,7 @@
     "last-semester": "Último semestre",
     "last-trimester": "Último trimestre",
     "last-update": "Última atualização",
-    "last-user": "Último usuario",
+    "last-user": "Último usuário",
     "last-week": "semana passada",
     "last-year": "Último ano",
     "latitude": "Latitude",
@@ -875,7 +875,7 @@
     "level2": "Level 2",
     "level3": "Nível 3",
     "level4": "Level 4",
-    "liabilities": "Liabilities",
+    "liabilities": "Passivo",
     "library": "Biblioteca",
     "license": "Licença",
     "like-than": "Mais do que",
@@ -1025,7 +1025,7 @@
     "no-stock": "Sem stock",
     "non-editable-accounting-entry": "Asiento contábil não editável",
     "non-editable-columns": "Colunas não editáveis: %columns%",
-    "non-editable-document": "Non editable document",
+    "non-editable-document": "Documento não editável",
     "none": "Nenhum",
     "normal": "Normal",
     "not-allowed-delete": "Não tem permiso para eliminar",
@@ -1081,7 +1081,7 @@
     "origin": "origin",
     "origin-warehouse": "Armazém de origem",
     "original": "original",
-    "original-file": "Fichero original",
+    "original-file": "Arquivo original",
     "other-data": "Outros dados",
     "others-filters": "Outros filtros",
     "out-of-stock": "fora de stock",
@@ -1164,7 +1164,7 @@
     "plugin-update": "a",
     "plugins": "Plugins",
     "plugins-p": "Os plugins permitem adicionar novas funções. Ative os que precisar agora, ou quando quiser, a partir do menu administrador.",
-    "points": "points",
+    "points": "Pontos",
     "points-of-interest": "Pontos de interesse",
     "port": "Porta",
     "position": "Posição",
@@ -1239,7 +1239,7 @@
     "rebuild": "rebuild",
     "rebuild-completed": "Reconstrução concluída",
     "rebuild-stock": "reconstruir-estoque",
-    "receipt": "receipt",
+    "receipt": "recibo",
     "receipt-expense-account": "Gastos no recibo %document%",
     "receipts": "receipts",
     "record-deleted-correctly": "Registro eliminado corretamente!",
@@ -1275,7 +1275,7 @@
     "related": "related",
     "related-subaccount-bank-charges": "Subconta relacionada para despesas bancárias (comissões, etc)",
     "related-subaccount-purchases-sales": "Subconta relacionada para compras e vendas",
-    "reloading": "reloading",
+    "reloading": "Recarregando...",
     "remove-filter": "Eliminar filtros",
     "remove-from-list": "remove-from-list",
     "removing-logs-until": "Eliminando logs hasta el %date%",
@@ -1509,7 +1509,7 @@
     "template": "Modelo",
     "template-error": "Erro de modelo",
     "template-not-found": "Modelo não encontrado",
-    "templates": "Plantillas",
+    "templates": "Modelos",
     "test": "Teste",
     "test-mail-not-implemented": "O teste do controlador de correio Mail não está implementado",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
@@ -1519,7 +1519,7 @@
     "third-trimester": "Terceiro Trimestre",
     "this-last-fortnight": "Nesta última quinzena",
     "this-last-month": "O último mês",
-    "this-last-week": "A última semana",
+    "this-last-week": "Últimos 7 dias",
     "this-last-year": "Últimos 365 dias",
     "this-month": "Este mês",
     "this-week": "Esta semana",
@@ -1539,7 +1539,7 @@
     "today": "Hoje",
     "total": "Total",
     "total-amount": "Valor total",
-    "total-cost": "total-cost",
+    "total-cost": "Custo total",
     "total-purchases": "Total das Compras",
     "total-sales": "Total das Vendas",
     "total-value-error": "Quantidade total de 0 1 incorreta (2). Valor correto: 3",
@@ -1571,7 +1571,7 @@
     "unbalance": "Desequilíbrio",
     "unbalanced-entry": "Lançamento descuadrado",
     "unchecked": "Sem checar",
-    "under-minimums": "under-minimums",
+    "under-minimums": "Abaixo dos mínimos",
     "undo": "Desfazer",
     "unit-profit": "Lucro unitário",
     "unit-purchase-price": "Preço de compra unitário",
@@ -1662,7 +1662,7 @@
     "working-hours": "Horário de trabalho",
     "works": "Trabalhos",
     "write-a-message-here": "Escribe un mensaje aquí",
-    "x-column": "x-column",
+    "x-column": "coluna x",
     "x-operation": "Operação sobre X",
     "y-column": "Coluna Y",
     "year": "Ano",
