--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -13,7 +13,7 @@
     "account-bad-parent": "La cuenta %codcuenta% tiene asociada una cuenta padre equivocada.",
     "account-balance": "Saldo konta",
     "account-code": "Código de cuenta",
-    "account-code-bigger-than-subaccounts": "El código de la cuenta %code% es más largo que las subcuentas",
+    "account-code-bigger-than-subaccounts": "Kod konta %code% jest dłuższy niż subkonta",
     "account-code-lower-than-parent": "Kod konta %code% jest krótszy niż rodzica",
     "account-data-missing": "Faltan datos en la cuenta",
     "account-dot-code": "Punto para autocompletar ceros. Ejemplo: 11.1 = 1100000001",
@@ -67,7 +67,7 @@
     "agent": "Agent",
     "agent-commission-info": "Dotyczy tylko wybranego agenta",
     "agent-dont-have-associated-supplier": "Agent nie ma powiązanego dostawcy",
-    "agents": "Agentes",
+    "agents": "Agenci",
     "alert": "Alerta",
     "alerts": "Alertas",
     "alfa-code-2": "Código alfa 2",
@@ -101,7 +101,7 @@
     "apc-set-key-item": "Asignado elemento '%item%' a APC.",
     "api": "API",
     "api-disabled": "API wyłączone. Możesz je włączyć w preferencjach aplikacji.",
-    "api-key": "API key",
+    "api-key": "Klucz API",
     "api-keys": "Klucze API",
     "api-version-not-found": "Versión de API no encontrada",
     "app-preferences": "Preferencje aplikacji",
@@ -197,7 +197,7 @@
     "cant-delete-default-company": "No se puede eliminar la empresa predeterminada",
     "cant-delete-default-country": "Nie można usunąć domyślnego kraju",
     "cant-delete-default-currency": "Nie można usunąć waluty domyślnej",
-    "cant-delete-default-payment-method": "No se puede eliminar la forma de pago predeterminada",
+    "cant-delete-default-payment-method": "Nie można usunąć domyślnej metody płatności",
     "cant-delete-default-serie": "No se puede eliminar la serie predeterminada",
     "cant-delete-default-tax": "Nie można usunąć domyślnego podatku",
     "cant-delete-default-warehouse": "No se puede eliminar el almacén por defecto",
@@ -309,7 +309,7 @@
     "controller-error": "Błąd kontrolera",
     "controller-not-found": "Kontroler nie znaleziony",
     "conversion-rate": "Tasa de conversión a €",
-    "conversion-rate-not-0": "La tasa de conversión no puede ser 0.",
+    "conversion-rate-not-0": "Stawka konwersji nie może być 0.",
     "convert-into-customer": "Convertir en cliente",
     "convert-into-supplier": "Konwertuj do dostawcy",
     "cookies": "Cookies",
@@ -323,7 +323,7 @@
     "cost-price": "Precio de coste",
     "cost-price-policy": "Política de precio de coste",
     "counterpart": "Contrapartida",
-    "countries": "Países",
+    "countries": "Kraje",
     "country": "País",
     "country-not-in-eu": "%codiso% nie należy do żadnego kraju Unii Europejskiej",
     "create": "Utwórz",
@@ -358,7 +358,7 @@
     "customer-invoice": "Factura de Cliente",
     "customer-invoice-deleted-successfully": "Faktura sprzedaży %docCode% została pomyślnie usunięta.",
     "customer-invoices": "Faktury klientów",
-    "customer-not-found": "Cliente no encontrado",
+    "customer-not-found": "Klient nie znaleziony",
     "customer-order": "Zamówienie klienta",
     "customer-orders": "Zamówienia klientów",
     "customer-payment-concept": "Pobranie za rachunek %document%",
@@ -384,7 +384,7 @@
     "date-of-the-document": "Data dokumentu do wygenerowania",
     "date-out": "Fecha salida",
     "date-out-of-exercise-range": "La fecha está fuera del rango del ejercicio %exerciseName%",
-    "date-wildcard-info": "Fecha actual (fecha del ordenador)",
+    "date-wildcard-info": "Bieżąca data (data z komputera)",
     "dateentry-wildcard-info": "Data wskazana w nagłówku wpisu księgowego",
     "day": "Dzień",
     "days": "Días",
@@ -427,7 +427,7 @@
     "delivery-notes-button": "Faktury realizowane:",
     "department": "Departamento",
     "departments": "Działy",
-    "desc": "Descripción",
+    "desc": "Opis",
     "desc-alfa-code-2": "Oficjalna identyfikacja dla nazw krajów i innych jednostek administracyjnych",
     "desc-alfa-code-3": "Identificación oficial para los nombres de países y otras dependencias administrativas",
     "desc-business-name": "Nombre oficial del cliente, para las facturas y otros documentos.",
@@ -437,7 +437,7 @@
     "desc-payment-days": "Ejemplo: 1,15,31",
     "desc-provicer-business-name-2": "Opis nazwy firmy dostawcy 2",
     "desc-provider-business-name": "Opis nazwy firmy dostawcy",
-    "desc-provider-name": "Nombre por el que es conocido el proveedor. Para uso interno.",
+    "desc-provider-name": "Nazwa, pod którą znany jest dostawca. Do użytku wewnętrznego.",
     "desc-rate-code": "Kod do wewnętrznego użytku stawki.",
     "desc-vat-document": "Identyfikator dokumentu, w którym stosuje się podatek",
     "description": "Opis",
@@ -481,7 +481,7 @@
     "documents": "Documentos",
     "documents-generated": "Documentos generados",
     "domiciled": "Domiciliado",
-    "done": "Realizado",
+    "done": "Zrealizowane",
     "done-date": "Data zakończenia",
     "dont-sell-above-pvp": "No vender por encima de PVP",
     "dont-sell-below-cost": "No vender por debajo de coste",
@@ -514,7 +514,7 @@
     "email-signature": "Firma del email",
     "email-to": "Email para",
     "emails": "Emaile",
-    "emails-sent": "Emails enviados",
+    "emails-sent": "Wysłane e-maile",
     "employee": "Pracownik",
     "employees": "Empleados",
     "empty": "Pusty",
@@ -538,7 +538,7 @@
     "error": "BŁĄD: %error%",
     "error-checking-vat-number": "Błąd podczas sprawdzania numeru VAT '%vat-number%' w systemie VIES",
     "error-connecting-memcache": "Error al conectar con el servidor Memcache.",
-    "error-deleting-lines": "Error al eliminar líneas",
+    "error-deleting-lines": "Błąd podczas usuwania linii",
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
     "error-on-xml-file": "Błąd w pliku XML %fileName%",
     "error-processing-xmlview": "Error procesando el XML de la vista, el archivo '%fileName%' no existe o esta mal formado",
@@ -559,7 +559,7 @@
     "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Rolnictwo, hodowla zwierząt i rybołówstwo",
     "es-tax-regime-exempt": "Exento",
-    "es-tax-regime-general": "Régimen general",
+    "es-tax-regime-general": "Reżim ogólny",
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
     "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Régimen simplificado",
@@ -569,7 +569,7 @@
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
     "estimation": "Presupuesto",
     "estimation-email-subject": "Twój kosztorys %code%",
-    "estimation-email-text": "Buenos días, le adjunto su presupuesto %code%",
+    "estimation-email-text": "Dzień dobry, załączam Twoją wycenę %code%",
     "estimations": "Szacowania",
     "event": "Wydarzenie",
     "events": "Wydarzenia",
@@ -593,7 +593,7 @@
     "expired": "Caducado",
     "expired-receipt": "Wygasły paragon",
     "export": "Eksportować",
-    "export-bill": "Factura de exportación",
+    "export-bill": "Faktura eksportowa",
     "extra-file": "Archivo extra",
     "failed": "Niepowodzenie",
     "families": "Rodziny",
@@ -639,7 +639,7 @@
     "font-size": "Rozmiar czcionki",
     "footer": "Stopka",
     "footer-text": "Texto pie de página",
-    "for-admins": "Para administradores",
+    "for-admins": "Dla administratorów",
     "for-all": "Para todos",
     "for-all-exercises": "Dla wszystkich ćwiczeń",
     "for-purchase": "Do zakupu",
@@ -785,7 +785,7 @@
     "invalid-web": "Nieprawidłowy adres sieciowy: %web%",
     "invoice": "Factura",
     "invoice-email-subject": "Su factura %code%",
-    "invoice-email-text": "Estimado cliente,  A continuación le adjuntamos la factura correspondiente a los servicios prestados. Si tienes cualquier consulta puede responder a este mismo email.  ¡Muchas gracias! Un saludo,",
+    "invoice-email-text": "Szanowny kliencie, w załączeniu przesyłamy fakturę odpowiadającą świadczonym usługom. Jeśli masz jakiekolwiek pytania, możesz odpowiedzieć na ten sam e-mail. Dziękujemy! Pozdrawiamy,",
     "invoice-has-no-receipts": "La factura no tiene recibos. Cree alguno desde la pestaña recibos.",
     "invoice-have-rectifying-cant-delete": "Faktura ma już korektę. Nie można jej usunąć.",
     "invoice-new-assigned-date": "Istnieją już faktury po wybranej dacie (%oldDate%). Nowa data przypisana: %newDate%",
@@ -835,7 +835,7 @@
     "languages-es_CR": "Español (Costa Rica)",
     "languages-es_DO": "Hiszpański (Rep. Dominikana)",
     "languages-es_EC": "Hiszpański (Ekwador)",
-    "languages-es_ES": "Español (España)",
+    "languages-es_ES": "Hiszpański (Hiszpania)",
     "languages-es_GT": "Español (Gwatemala)",
     "languages-es_MX": "Español (México)",
     "languages-es_PA": "Español (Panamá)",
@@ -856,7 +856,7 @@
     "last-month": "W zeszłym miesiącu",
     "last-price-estimation": "Ostatnia szacunkowa cena",
     "last-price-sale": "Ostatnia cena sprzedaży",
-    "last-purchase-price": "Último precio de compra",
+    "last-purchase-price": "Ostatnia cena zakupu",
     "last-quarter": "El pasado cuatrimestre",
     "last-semester": "Ostatni semestr",
     "last-trimester": "Ostatni kwartał",
@@ -899,7 +899,7 @@
     "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
     "login-password-fail": "Użytkownik lub hasło są niepoprawne",
     "login-text": "Escriba su nombre de usuario y contraseña para iniciar sesión",
-    "login-to-continue": "Inicie sesión para continuar",
+    "login-to-continue": "Zaloguj się, aby kontynuować",
     "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
     "login-user-not-found": "Usuario no encontrado: %nick%",
     "logo": "Logotipo",
@@ -920,7 +920,7 @@
     "mail-test-ok": "Prueba de email ejecutada correctamente",
     "mailer": "Sterownik poczty",
     "main-address": "Główne adres",
-    "manage": "Administrar",
+    "manage": "Zarządzaj",
     "manage-installation": "Administrar",
     "manual": "Instrukcja obsługi",
     "manufacturer": "Producent",
@@ -959,7 +959,7 @@
     "mismatched-accounting-entry": "Asiento descuadrado",
     "missing-data-epigraph-group": "Brak danych w grupie epigrafów.",
     "missing-data-subaccount": "Brak danych w subkoncie.",
-    "missing-epigraph-data": "Faltan datos en el epígrafe.",
+    "missing-epigraph-data": "Brak danych w epigrafie.",
     "missing-file": "Falta el archivo",
     "missing-file-help": "Parece que este archivo no se encuentra en tu instalación. Quizás no lo uses, pero <em>no puedes eliminarlo<\/em>.",
     "mobile": "Telefon komórkowy",
@@ -991,7 +991,7 @@
     "movements": "Ruchy",
     "my-profile": "Mój profil",
     "mysql": "MySQL",
-    "mysql-socket": "Socket MySQL",
+    "mysql-socket": "Gniazdo MySQL",
     "mysql-socket-p": "To pole jest wymagane tylko w niektórych hostings z MySQL.",
     "name": "Nazwa",
     "name-or-business-name": "Nazwa lub nazwa firmy",
@@ -1019,11 +1019,11 @@
     "no-gaps-found": "Nie znaleziono luk",
     "no-invoice": "Sin factura",
     "no-outstanding-amount": "No hay importe pendiente",
-    "no-print-permission": "No tiene permiso para imprimir o exportar",
+    "no-print-permission": "Nie masz uprawnień do drukowania lub eksportowania",
     "no-reference": "Brak odniesienia",
     "no-selected-item": "Nie wybrano żadnego elementu",
     "no-stock": "Brak kontrolowania zapasów",
-    "non-editable-accounting-entry": "Asiento no editable",
+    "non-editable-accounting-entry": "Nieedytowalny wpis księgowy",
     "non-editable-columns": "Kolumny nieedytowalne: %columns%",
     "non-editable-document": "Dokument nieedytowalny",
     "none": "Ninguno",
@@ -1151,13 +1151,13 @@
     "plugin-enabled": "Wtyczka %pluginName% została pomyślnie włączona.",
     "plugin-file-too-big": "Ten serwer nie pozwala na przesyłanie plików większych niż %size% MB. Proszę zwiększyć maksymalny rozmiar przesyłanego pliku w PHP lub skopiuj plik do folderu wtyczek.",
     "plugin-installation-disabled": "La instalación de plugins está desactivada en este servidor",
-    "plugin-installed": "Plugin '%pluginName%' instalado",
+    "plugin-installed": "Plugin '%pluginName%' zainstalowany",
     "plugin-need-update": "Wtyczka %plugin% będzie wymagać aktualizacji, aby działała z nową wersją FacturaScripts.",
     "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
     "plugin-needed": "Se requiere el plugin %pluginName%.",
     "plugin-needs-fs-version": "El plugin %pluginName% necesita FacturaScripts %minVersion% pero tiene instalado FacturaScripts %version%",
     "plugin-not-compatible": "Wtyczka %pluginName% nie jest zgodna z FacturaScripts %version%",
-    "plugin-order": "Orden: %num%",
+    "plugin-order": "Zamówienie: %num%",
     "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
     "plugin-removal-disabled": "La eliminación de plugins está desactivada en este servidor",
     "plugin-unsupported-version": "El plugin %pluginName% es para FacturaScripts 2017 o anteriores, pero estás usando FacturaScripts %version%",
@@ -1264,7 +1264,7 @@
     "register": "Registrar",
     "register-install-ad": "Registra la instalación de FacturaScripts",
     "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
-    "register-installation": "Registrar instalación",
+    "register-installation": "Zarejestruj instalację",
     "register-installation-p": "Registre su instalación para poder actualizar plugins de pago o privados.",
     "register-symbol": "#",
     "registered-installation": "Instalación registrada #%number%",
@@ -1294,7 +1294,7 @@
     "report-grouping-account": "Grupowanie według kont",
     "report-non-grouping-account": "No agrupar por cuentas",
     "report-taxes-p": "Ten raport umożliwia uzyskanie rozliczenia podatków z faktur zakupu lub sprzedaży w wybranym zakresie",
-    "reports": "Informes",
+    "reports": "Raporty",
     "request-sent": "Prośba wysłana",
     "required": "Wymagane",
     "requires-core": "Wymaga FacturaScripts %version%",
@@ -1328,7 +1328,7 @@
     "sdk": "SDK",
     "search": "Szukaj",
     "search-document": "Wpisz numer %doctype%, aby wyszukać.",
-    "search-product": "Buscar producto",
+    "search-product": "Szukaj produktu",
     "second-hand": "Używane",
     "second-quarter": "2º trimestre",
     "second-trimester": "Drugi trymestr",
@@ -1336,11 +1336,11 @@
     "select-all": "Zaznacz wszystko",
     "select-none": "Nie wybieraj nic",
     "select-plugin-zip-file": "Wybierz wtyczkę (zip):",
-    "select-user": "Seleccionar usuario",
+    "select-user": "Wybierz użytkownika",
     "selected-quantity": "Ilość wybrana",
     "selector-number": "Wybieracz",
     "send": "Wysłać",
-    "send-anonymous-data": "Wysyłanie anonimowych danych",
+    "send-anonymous-data": "Wyślij dane anonimowe",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
@@ -1358,10 +1358,10 @@
     "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "Przyrostek SEPA",
     "september": "Septiembre",
-    "sequences": "Secuencias",
+    "sequences": "Sekwencje",
     "serial-number": "Numer seryjny",
     "serie": "Serie",
-    "serieb": "Serie B",
+    "serieb": "Seria B",
     "serier": "Seria R",
     "serierb": "Seria RB",
     "series": "Serie",
@@ -1375,13 +1375,13 @@
     "setup-options": "Konfiguracja opcji",
     "shipping": "Envío",
     "shipping-address": "Adres dostawy",
-    "shop": "Tienda",
+    "shop": "Sklep",
     "shops": "Tiendas",
     "short": "Corto",
     "short-name": "Krótka nazwa",
     "show": "Mostrar",
     "show-balance-graphic": "Mostrar gráficos en asientos",
-    "show-crm-warnings": "Mostrar avisos CRM",
+    "show-crm-warnings": "Pokaż ostrzeżenia CRM",
     "show-expired-receipts": "Mostrar recibos vencidos",
     "show-month-stats": "Pokaż statystyki miesięczne",
     "show-pending-remittances": "Mostrar remesas pendientes",
@@ -1411,7 +1411,7 @@
     "special-account": "Konto specjalne",
     "special-accounting-entries": "Asientos especiales",
     "special-accounts": "Konta specjalne",
-    "specials-actions": "Acciones especiales",
+    "specials-actions": "Akcje specjalne",
     "spreadsheet-xls": "Archivo Excel",
     "standard": "Estándar",
     "start": "Początek",
@@ -1431,7 +1431,7 @@
     "stockmax": "Max zapasów",
     "stockmin": "Stock mín.",
     "storage-limit-almost": "Niemal osiągnięto limit przechowywania (%limit%). Pozostało %free%",
-    "storage-limit-reached": "Límite de almacenamiento alcanzado",
+    "storage-limit-reached": "Osiągnięto limit przechowywania",
     "stripe": "Stripe",
     "structured-data-csv": "Plik CSV",
     "sub-account": "Subcuenta",
@@ -1493,7 +1493,7 @@
     "tables": "Tablas",
     "task": "Zadanie",
     "tasks": "Zadania",
-    "tasks-completed-title": "Tareas completadas",
+    "tasks-completed-title": "Zadania ukończone",
     "tasks-component-title": "Zadania",
     "tasks-personal-title": "Zadania osobiste",
     "tax": "Impuesto",
@@ -1511,13 +1511,13 @@
     "template-not-found": "Plantilla no encontrada",
     "templates": "Plantillas",
     "test": "Test",
-    "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
+    "test-mail-not-implemented": "Test kontrolera poczty Mail nie został zaimplementowany",
     "test-sendmail-not-implemented": "Test sterownika poczty sendmail nie jest zaimplementowany",
     "text-color": "Color de texto",
     "texts": "Textos",
     "third-quarter": "3º trimestre",
     "third-trimester": "Trzeci kwartał",
-    "this-last-fortnight": "Los últimos 15 días",
+    "this-last-fortnight": "Ostatnie 15 dni",
     "this-last-month": "Ostatnie 30 dni",
     "this-last-week": "Ostatnie 7 dni",
     "this-last-year": "Ostatnie 365 dni",
@@ -1550,7 +1550,7 @@
     "totals": "Całkowite",
     "town": "Miejscowość",
     "tracking-code": "Código seguimiento",
-    "transfer": "Transferencia",
+    "transfer": "Transfer",
     "transfers": "Przesunięcia",
     "transfers-stock": "Transfery zapasów",
     "translation": "Traducción",
@@ -1606,7 +1606,7 @@
     "using-filecache": "Usando Filecache",
     "using-memcache": "Usando Memcache",
     "valid-for-day": "Válido para un día",
-    "validate": "Validar",
+    "validate": "Zatwierdź",
     "validate-iban": "Waliduj IBAN",
     "valuation-type": "Tipo de valoración",
     "value": "Wartość",
